# Hugos-photos

./: .dockerignore  .env  .gitignore  Backend.Dockerfile  Cargo.toml  Frontend.Dockerfile  LICENSE  README.md  TODO.md  build.sh  docker-compose.yml  fly.toml
frontend/: .gitignore  Dockerfile  fly.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: About.js  App.css  App.js  COMPRESS.py  Collection.js  Collections.js  Globals.js  Icon.js  ImageGallery.js  Nav.js  ScaledImage.js  Scroller.js  index.js
frontend/src/assets/images/: compress.py
frontend/src/post/: Add.js  Create.js  Post.js
src/: appdata.rs  main.rs  routes.rs
uploads/: Readme.md
uploads-compressed/: Readme.md
