[package]
name = "hugos-photos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
bincode = "1.3.3"
serde_derive = "1.0.152"
serde = "1.0.152"
serde_json = "1.0.91"
actix-cors = "0.6.4"
regex = "1.7.1"

# UUID-generator
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

